--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
-    "deploy-commands": "node src/deploy-commands.js"
+    "deploy-dev": "node src/deploy-dev.js",
+    "deploy-global": "node src/deploy-global.js"
   },
   "repository": {
     "type": "git",
