--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
-    "deploy-dev": "node src/deploy-dev.js",
-    "deploy-global": "node src/deploy-global.js"
+    "deploy-dev": "node src/deploy/deploy-dev.js",
+    "deploy-global": "node src/deploy/deploy-global.js",
+    "delete-all-commands": "node src/deploy/delete-all-commands.js"
   },
   "repository": {
     "type": "git",
